# car-plate-recognition

./: .gitignore  Car_Plate_Number_Recognition_Detaction_.ipynb  Car_Plate_Recognition_Analysis.ipynb  Car_Plate_Recognition_Project.ipynb  README.md  convert_to_yolo.py  main.py  model_test.py  pyproject.toml  seperated-plates.py  simple_gui.py  yemen car plate number model tran.py  yemen_plate_gui.py  yemen_plate_v2_gui.py  yemen_plate_v3_gui.py
GUIs/: simple-gui-qt.py  simple_gui_tiknter.py
GUIs/modern-qt-gui/: ESP-CAM-code.py  main.py
GUIs/qt_with_live/: main.py
GUIs/qt_with_live/components/: image_tab.py  live_stream_tab.py
GUIs/qt_with_live/utils/: plate_detector.py  plate_recognizer.py
GUIs/simple_gui_tiknter/: simple_gui_tiknter.py
GUIs/streamlit_GUI/: streamlit_GUI.py
plat number car yemen.v1i.yolov8/: README.dataset.txt  README.roboflow.txt
plat number car yemen.v1i.yolov8/test/labels/: -_-_jpg.rf.0d208623c8945ddd6281824281ebca82.txt  -_-_jpg.rf.31ea04c74d1ca54cb4c7d1810af3cae9.txt  -_-_jpg.rf.885f99dc7269c40f65cae3ef374b7956.txt
plat number car yemen.v1i.yolov8/train/labels/: -_-_jpg.rf.046161bc55c3754d6945a69540be74f5.txt  -_-_jpg.rf.0aa96107af81e01d0dd3d179286ea078.txt  -_-_jpg.rf.190191ef7b1299a5e4b342b3c6720614.txt  -_-_jpg.rf.2a7835a431f3471816efb35d01ce6e0b.txt  -_-_jpg.rf.303c42befaf0f71421dc5054a1d04b25.txt  -_-_jpg.rf.3d6c200bcdb74b396637d26efb27119e.txt  -_-_jpg.rf.4547a519042c16d67870ace9f3e55b40.txt  -_-_jpg.rf.58098248d660db9941e160e2ce88a2b2.txt  -_-_jpg.rf.5dcc10aa5d09cbb6a6e9856b33c54461.txt  -_-_jpg.rf.693bd6f8f7ae4af0613b0e39aa210107.txt  -_-_jpg.rf.8a1929c42941f961e40f60b8fcd64196.txt  (+14 more)
recognition-with-live-stream/: live-stream.py
(+146 files in other folders)
